--- a/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanacontactpoints.yaml
+++ b/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanacontactpoints.yaml
@@ -4,16 +4,16 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanamutetimings.grafana.integreatly.org
+  name: grafanacontactpoints.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaMuteTiming
-    listKind: GrafanaMuteTimingList
-    plural: grafanamutetimings
-    singular: grafanamutetiming
+    kind: GrafanaContactPoint
+    listKind: GrafanaContactPointList
+    plural: grafanacontactpoints
+    singular: grafanacontactpoint
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -27,7 +27,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
+        description: GrafanaContactPoint is the Schema for the grafanacontactpoints
+          API
         properties:
           apiVersion:
             description: |-
@@ -47,21 +48,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
+            description: GrafanaContactPointSpec defines the desired state of GrafanaContactPoint
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              editable:
-                default: true
-                description: Whether to enable or disable editing of the mute timing
-                  in Grafana UI
+              disableResolveMessage:
                 type: boolean
-                x-kubernetes-validations:
-                - message: spec.editable is immutable
-                  rule: self == oldSelf
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -112,77 +107,103 @@ spec:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
               name:
-                description: A unique name for the mute timing
                 type: string
               resyncPeriod:
                 default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
-                format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              time_intervals:
-                description: Time intervals for muting
+              settings:
+                x-kubernetes-preserve-unknown-fields: true
+              type:
+                minLength: 1
+                type: string
+              uid:
+                description: Manually specify the UID the Contact Point is created
+                  with. Can be any string consisting of alphanumeric characters, -
+                  and _ with a maximum length of 40
+                maxLength: 40
+                pattern: ^[a-zA-Z0-9-_]+$
+                type: string
+                x-kubernetes-validations:
+                - message: spec.uid is immutable
+                  rule: self == oldSelf
+              valuesFrom:
                 items:
                   properties:
-                    days_of_month:
-                      description: |-
-                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
-                        For example: -1 for the last day of the month.
-                      items:
-                        type: string
-                      type: array
-                    location:
-                      description: Depending on the location, the time range is displayed
-                        in local time.
+                    targetPath:
                       type: string
-                    months:
-                      description: |-
-                        The months of the year in either numerical or the full calendar month.
-                        For example: 1, may.
-                      items:
-                        type: string
-                      type: array
-                    times:
-                      description: The time inclusive of the start and exclusive of
-                        the end time (in UTC if no location has been selected, otherwise
-                        local time).
-                      items:
-                        properties:
-                          end_time:
-                            description: end time
-                            type: string
-                          start_time:
-                            description: start time
-                            type: string
-                        required:
-                        - end_time
-                        - start_time
-                        type: object
-                      type: array
-                    weekdays:
-                      description: |-
-                        The day or range of days of the week.
-                        For example: monday, thursday
-                      items:
-                        type: string
-                      type: array
-                    years:
-                      description: |-
-                        The year or years for the interval.
-                        For example: 2021
-                      items:
-                        type: string
-                      type: array
+                    valueFrom:
+                      properties:
+                        configMapKeyRef:
+                          description: Selects a key of a ConfigMap.
+                          properties:
+                            key:
+                              description: The key to select.
+                              type: string
+                            name:
+                              default: ""
+                              description: |-
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              type: string
+                            optional:
+                              description: Specify whether the ConfigMap or its key
+                                must be defined
+                              type: boolean
+                          required:
+                          - key
+                          type: object
+                          x-kubernetes-map-type: atomic
+                        secretKeyRef:
+                          description: Selects a key of a Secret.
+                          properties:
+                            key:
+                              description: The key of the secret to select from.  Must
+                                be a valid secret key.
+                              type: string
+                            name:
+                              default: ""
+                              description: |-
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              type: string
+                            optional:
+                              description: Specify whether the Secret or its key must
+                                be defined
+                              type: boolean
+                          required:
+                          - key
+                          type: object
+                          x-kubernetes-map-type: atomic
+                      type: object
+                      x-kubernetes-validations:
+                      - message: Either configMapKeyRef or secretKeyRef must be set
+                        rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef))
+                          || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
+                  required:
+                  - targetPath
+                  - valueFrom
                   type: object
-                minItems: 1
+                maxItems: 99
                 type: array
             required:
             - instanceSelector
             - name
-            - time_intervals
+            - settings
+            - type
             type: object
             x-kubernetes-validations:
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
