--- a/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanadatasources.yaml
+++ b/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanadatasources.yaml
@@ -4,19 +4,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafananotificationpolicies.grafana.integreatly.org
+  name: grafanadatasources.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaNotificationPolicy
-    listKind: GrafanaNotificationPolicyList
-    plural: grafananotificationpolicies
-    singular: grafananotificationpolicy
+    kind: GrafanaDatasource
+    listKind: GrafanaDatasourceList
+    plural: grafanadatasources
+    singular: grafanadatasource
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -27,8 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaNotificationPolicy is the Schema for the GrafanaNotificationPolicy
-          API
+        description: GrafanaDatasource is the Schema for the grafanadatasources API
         properties:
           apiVersion:
             description: |-
@@ -48,21 +50,51 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaNotificationPolicySpec defines the desired state of
-              GrafanaNotificationPolicy
+            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              editable:
-                description: Whether to enable or disable editing of the notification
-                  policy in Grafana UI
-                type: boolean
-                x-kubernetes-validations:
-                - message: Value is immutable
-                  rule: self == oldSelf
+              datasource:
+                properties:
+                  access:
+                    type: string
+                  basicAuth:
+                    type: boolean
+                  basicAuthUser:
+                    type: string
+                  database:
+                    type: string
+                  editable:
+                    description: Whether to enable/disable editing of the datasource
+                      in Grafana UI
+                    type: boolean
+                  isDefault:
+                    type: boolean
+                  jsonData:
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                  name:
+                    type: string
+                  orgId:
+                    description: Deprecated field, it has no effect
+                    format: int64
+                    type: integer
+                  secureJsonData:
+                    type: object
+                    x-kubernetes-preserve-unknown-fields: true
+                  type:
+                    type: string
+                  uid:
+                    description: Deprecated field, use spec.uid instead
+                    type: string
+                  url:
+                    type: string
+                  user:
+                    type: string
+                type: object
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -112,152 +144,121 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
+              plugins:
+                description: plugins
+                items:
+                  properties:
+                    name:
+                      type: string
+                    version:
+                      type: string
+                  required:
+                  - name
+                  - version
+                  type: object
+                type: array
               resyncPeriod:
                 default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
-                format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              route:
-                description: Routes for alerts to match against
-                properties:
-                  continue:
-                    description: continue
-                    type: boolean
-                  group_by:
-                    description: group by
-                    items:
+              uid:
+                description: |-
+                  The UID, for the datasource, fallback to the deprecated spec.datasource.uid
+                  and metadata.uid. Can be any string consisting of alphanumeric characters,
+                  - and _ with a maximum length of 40 +optional
+                maxLength: 40
+                pattern: ^[a-zA-Z0-9-_]+$
+                type: string
+                x-kubernetes-validations:
+                - message: spec.uid is immutable
+                  rule: self == oldSelf
+              valuesFrom:
+                description: environments variables from secrets or config maps
+                items:
+                  properties:
+                    targetPath:
                       type: string
-                    type: array
-                  group_interval:
-                    description: group interval
-                    type: string
-                  group_wait:
-                    description: group wait
-                    type: string
-                  match_re:
-                    additionalProperties:
-                      type: string
-                    description: match re
-                    type: object
-                  matchers:
-                    description: matchers
-                    items:
+                    valueFrom:
                       properties:
-                        isEqual:
-                          description: is equal
-                          type: boolean
-                        isRegex:
-                          description: is regex
-                          type: boolean
-                        name:
-                          description: name
-                          type: string
-                        value:
-                          description: value
-                          type: string
-                      required:
-                      - isRegex
-                      - value
-                      type: object
-                    type: array
-                  mute_time_intervals:
-                    description: mute time intervals
-                    items:
-                      type: string
-                    type: array
-                  object_matchers:
-                    description: object matchers
-                    items:
-                      description: |-
-                        ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
-
-                        swagger:model ObjectMatcher
-                      items:
-                        type: string
-                      type: array
-                    type: array
-                  provenance:
-                    description: provenance
-                    type: string
-                  receiver:
-                    description: receiver
-                    minLength: 1
-                    type: string
-                  repeat_interval:
-                    description: repeat interval
-                    type: string
-                  routeSelector:
-                    description: |-
-                      selects GrafanaNotificationPolicyRoutes to merge in when specified
-                      mutually exclusive with Routes
-                    properties:
-                      matchExpressions:
-                        description: matchExpressions is a list of label selector
-                          requirements. The requirements are ANDed.
-                        items:
-                          description: |-
-                            A label selector requirement is a selector that contains values, a key, and an operator that
-                            relates the key and values.
+                        configMapKeyRef:
+                          description: Selects a key of a ConfigMap.
                           properties:
                             key:
-                              description: key is the label key that the selector
-                                applies to.
+                              description: The key to select.
                               type: string
-                            operator:
+                            name:
+                              default: ""
                               description: |-
-                                operator represents a key's relationship to a set of values.
-                                Valid operators are In, NotIn, Exists and DoesNotExist.
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
                               type: string
-                            values:
-                              description: |-
-                                values is an array of string values. If the operator is In or NotIn,
-                                the values array must be non-empty. If the operator is Exists or DoesNotExist,
-                                the values array must be empty. This array is replaced during a strategic
-                                merge patch.
-                              items:
-                                type: string
-                              type: array
-                              x-kubernetes-list-type: atomic
+                            optional:
+                              description: Specify whether the ConfigMap or its key
+                                must be defined
+                              type: boolean
                           required:
                           - key
-                          - operator
                           type: object
-                        type: array
-                        x-kubernetes-list-type: atomic
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: |-
-                          matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
-                          map is equivalent to an element of matchExpressions, whose key field is "key", the
-                          operator is "In", and the values array contains only "value". The requirements are ANDed.
-                        type: object
-                    type: object
-                    x-kubernetes-map-type: atomic
-                  routes:
-                    description: routes, mutually exclusive with RouteSelector
-                    x-kubernetes-preserve-unknown-fields: true
-                required:
-                - receiver
-                type: object
+                          x-kubernetes-map-type: atomic
+                        secretKeyRef:
+                          description: Selects a key of a Secret.
+                          properties:
+                            key:
+                              description: The key of the secret to select from.  Must
+                                be a valid secret key.
+                              type: string
+                            name:
+                              default: ""
+                              description: |-
+                                Name of the referent.
+                                This field is effectively required, but due to backwards compatibility is
+                                allowed to be empty. Instances of this type with an empty value here are
+                                almost certainly wrong.
+                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              type: string
+                            optional:
+                              description: Specify whether the Secret or its key must
+                                be defined
+                              type: boolean
+                          required:
+                          - key
+                          type: object
+                          x-kubernetes-map-type: atomic
+                      type: object
+                      x-kubernetes-validations:
+                      - message: Either configMapKeyRef or secretKeyRef must be set
+                        rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef))
+                          || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
+                  required:
+                  - targetPath
+                  - valueFrom
+                  type: object
+                maxItems: 99
+                type: array
             required:
+            - datasource
             - instanceSelector
-            - route
             type: object
             x-kubernetes-validations:
-            - message: spec.editable is immutable
-              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
-                && has(self.editable)))
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaNotificationPolicyStatus defines the observed state
-              of GrafanaNotificationPolicy
+            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
             properties:
+              NoMatchingInstances:
+                description: The datasource instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
                 description: Results when synchonizing resource with Grafana instances
                 items:
@@ -315,14 +316,17 @@ spec:
                   - type
                   type: object
                 type: array
-              discoveredRoutes:
-                items:
-                  type: string
-                type: array
+              hash:
+                type: string
+              lastMessage:
+                description: 'Deprecated: Check status.conditions or operator logs'
+                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
                 format: date-time
+                type: string
+              uid:
                 type: string
             type: object
         required:
