--- a/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanafolders.yaml
+++ b/crds/grafana-operator/v5.17.1.grafana.integreatly.org_grafanafolders.yaml
@@ -4,19 +4,22 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.3
-  name: grafanaalertrulegroups.grafana.integreatly.org
+  name: grafanafolders.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaAlertRuleGroup
-    listKind: GrafanaAlertRuleGroupList
-    plural: grafanaalertrulegroups
-    singular: grafanaalertrulegroup
+    kind: GrafanaFolder
+    listKind: GrafanaFolderList
+    plural: grafanafolders
+    singular: grafanafolder
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
+    - jsonPath: .status.NoMatchingInstances
+      name: No matching instances
+      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -27,8 +30,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaAlertRuleGroup is the Schema for the grafanaalertrulegroups
-          API
+        description: GrafanaFolder is the Schema for the grafanafolders API
         properties:
           apiVersion:
             description: |-
@@ -48,28 +50,13 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaAlertRuleGroupSpec defines the desired state of GrafanaAlertRuleGroup
+            description: GrafanaFolderSpec defines the desired state of GrafanaFolder
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              editable:
-                description: Whether to enable or disable editing of the alert rule
-                  group in Grafana UI
-                type: boolean
-                x-kubernetes-validations:
-                - message: Value is immutable
-                  rule: self == oldSelf
-              folderRef:
-                description: Match GrafanaFolders CRs to infer the uid
-                type: string
-              folderUID:
-                description: |-
-                  UID of the folder containing this rule group
-                  Overrides the FolderSelector
-                type: string
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -119,163 +106,59 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              interval:
-                format: duration
-                pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+              parentFolderRef:
+                description: Reference to an existing GrafanaFolder CR in the same
+                  namespace
                 type: string
-              name:
-                description: Name of the alert rule group. If not specified, the resource
-                  name will be used.
+              parentFolderUID:
+                description: UID of the folder in which the current folder should
+                  be created
+                type: string
+              permissions:
+                description: Raw json with folder permissions, potentially exported
+                  from Grafana
                 type: string
               resyncPeriod:
                 default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
-                format: duration
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
-              rules:
-                items:
-                  description: AlertRule defines a specific rule to be evaluated.
-                    It is based on the upstream model with some k8s specific type
-                    mappings
-                  properties:
-                    annotations:
-                      additionalProperties:
-                        type: string
-                      type: object
-                    condition:
-                      type: string
-                    data:
-                      items:
-                        properties:
-                          datasourceUid:
-                            description: Grafana data source unique identifier; it
-                              should be '__expr__' for a Server Side Expression operation.
-                            type: string
-                          model:
-                            description: JSON is the raw JSON query and includes the
-                              above properties as well as custom properties.
-                            x-kubernetes-preserve-unknown-fields: true
-                          queryType:
-                            description: |-
-                              QueryType is an optional identifier for the type of query.
-                              It can be used to distinguish different types of queries.
-                            type: string
-                          refId:
-                            description: RefID is the unique identifier of the query,
-                              set by the frontend call.
-                            type: string
-                          relativeTimeRange:
-                            description: relative time range
-                            properties:
-                              from:
-                                description: from
-                                format: int64
-                                type: integer
-                              to:
-                                description: to
-                                format: int64
-                                type: integer
-                            type: object
-                        type: object
-                      type: array
-                    execErrState:
-                      enum:
-                      - OK
-                      - Alerting
-                      - Error
-                      - KeepLast
-                      type: string
-                    for:
-                      format: duration
-                      pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
-                      type: string
-                    isPaused:
-                      type: boolean
-                    labels:
-                      additionalProperties:
-                        type: string
-                      type: object
-                    noDataState:
-                      enum:
-                      - Alerting
-                      - NoData
-                      - OK
-                      - KeepLast
-                      type: string
-                    notificationSettings:
-                      properties:
-                        group_by:
-                          items:
-                            type: string
-                          type: array
-                        group_interval:
-                          type: string
-                        group_wait:
-                          type: string
-                        mute_time_intervals:
-                          items:
-                            type: string
-                          type: array
-                        receiver:
-                          type: string
-                        repeat_interval:
-                          type: string
-                      required:
-                      - receiver
-                      type: object
-                    record:
-                      properties:
-                        from:
-                          type: string
-                        metric:
-                          type: string
-                      required:
-                      - from
-                      - metric
-                      type: object
-                    title:
-                      example: Always firing
-                      maxLength: 190
-                      minLength: 1
-                      type: string
-                    uid:
-                      description: UID of the alert rule. Can be any string consisting
-                        of alphanumeric characters, - and _ with a maximum length
-                        of 40
-                      maxLength: 40
-                      pattern: ^[a-zA-Z0-9-_]+$
-                      type: string
-                  required:
-                  - condition
-                  - data
-                  - execErrState
-                  - for
-                  - noDataState
-                  - title
-                  - uid
-                  type: object
-                type: array
+              title:
+                description: Display name of the folder in Grafana
+                type: string
+              uid:
+                description: Manually specify the UID the Folder is created with.
+                  Can be any string consisting of alphanumeric characters, - and _
+                  with a maximum length of 40
+                maxLength: 40
+                pattern: ^[a-zA-Z0-9-_]+$
+                type: string
+                x-kubernetes-validations:
+                - message: spec.uid is immutable
+                  rule: self == oldSelf
             required:
             - instanceSelector
-            - interval
-            - rules
             type: object
             x-kubernetes-validations:
-            - message: Only one of FolderUID or FolderRef can be set
-              rule: (has(self.folderUID) && !(has(self.folderRef))) || (has(self.folderRef)
-                && !(has(self.folderUID)))
-            - message: spec.editable is immutable
-              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
-                && has(self.editable)))
+            - message: Only one of parentFolderUID or parentFolderRef can be set
+              rule: (has(self.parentFolderUID) && !(has(self.parentFolderRef))) ||
+                (has(self.parentFolderRef) && !(has(self.parentFolderUID))) || !(has(self.parentFolderRef)
+                && (has(self.parentFolderUID)))
+            - message: spec.uid is immutable
+              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
+                has(self.uid)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: The most recent observed state of a Grafana resource
+            description: GrafanaFolderStatus defines the observed state of GrafanaFolder
             properties:
+              NoMatchingInstances:
+                description: The folder instanceSelector can't find matching grafana
+                  instances
+                type: boolean
               conditions:
                 description: Results when synchonizing resource with Grafana instances
                 items:
@@ -333,6 +216,8 @@ spec:
                   - type
                   type: object
                 type: array
+              hash:
+                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
